--- a/LECTURE3.Rmd
+++ b/LECTURE3.Rmd
@@ -25,7 +25,7 @@ Or in a more verbose form...
 
 > I think I may make fairly two postulata. First, that food is necessary to the existence of man. Secondly, that the passion between the sexes is necessary and will remain nearly in its present state ... Assuming then my postulata as granted, I say, that the power of population is infinitely greater than the power in the earth to produce subsistence for man. Population, when unchecked, increases in a *geometrical ratio*. Subsistence increases only in an *arithmetical ratio*. A slight acquaintance with numbers will show the immensity of the first power in comparison of the second. By the law of our nature which makes food necessary to the life of man, the effects of these two unequal powers must be kept equal. This implies a strong and constantly operating check on population from the difficulty of subsistence. This difficulty must fall somewhere and must necessarily be severely felt by a large portion of mankind...
 
-And his argument can be summed up in this syllogism:
+And his argument can be summed up in this logical argument:
 
 1. That the increase of population is necessarily limited by the means of subsistence,
 2. That population does invariably increase when the means of subsistence increase, and,
