--- a/LAB2.Rmd
+++ b/LAB2.Rmd
@@ -13,11 +13,11 @@ output:
 knitr::opts_chunk$set(echo = TRUE, cache = TRUE)
 ```
 
-In this lab we will have an opportunity to build more complex population models in InsightMaker. Among the complexities we will play around with are *density dependence*, *chaos* and *age structure*.  
+In this lab we will have an opportunity to build more complex population models in InsightMaker. Among the concepts we will play around with are *density dependence*, *chaos* and *age structure*.  
 
 First let's do some math!
 
-## Mathematics of Density-Dependence
+## Mathematics of Density-Dependent population regulation
 
 Recall the basic population growth equation:
 
@@ -31,11 +31,11 @@ For the death rate *d* we might expect it to go up as abundance goes up:
 
 $d = d_{min}+c*N_t \qquad \text{(Eq. 3)}$
 
-The above equations mathematically nicely illustrate the meaning of density dependence. That is, the vital rates are *dependent* on density!
+The above equations nicely illustrate the meaning of density dependence. That is, the vital rates are *dependent* on density!
 
-**thought Q**: what do the *a* and *c* constants in the above equations represent? 
+**thought Q**: what do the *a* and *c* constants in the above equations really represent? You will have a chance to think more about this in the first exercise. 
 
-Okay, now we can substitute the above equations into Eq. 1:
+Okay, now we can substitute the above equations into **Eq. 1**:
 
 $\Delta N = (b_{max}-a*N_t - d_{min}+c*N_t) \cdot N_t \qquad \text{(Eq. 4)}$
 
@@ -47,300 +47,161 @@ Which, if we define $\frac{b-d}{a+c}$ as a constant, $K$, we can re-write like t
 
 $\Delta N = r \cdot N_t \cdot \left ( 1 - \frac{N}{K}  \right )  \qquad \text{(Eq. 6)}$
 
-This is probably the second most important equation of population ecology, and it is called the **Logistic growth equation**. This lab will give us an opportunity to play around with this equation!
+This is probably the second most important equation of population ecology, and it is called the **Logistic growth equation**. This lab will give us an opportunity to get to know this equation and its implications for population ecology!
 
 
-
-### Exercise 1
+## Exercise 1: hypothetical mechanisms of density dependence
 
 Please provide short answers to the following questions:
 
-a. Describe two possible density-dependence mechanisms -- that is, tell a story about two hypothetical wildlife populations, one of which experiences lower survival as densities increase and another that experiences lower reproduction.  Have fun and be creative- we will not grade these on whether these mechanisms actually occur in nature- we just want to give you a chance to think about the many possible mechanisms that can potentially regulate wild populations.  
+1a. Describe two possible density-dependence mechanisms -- that is, tell a plausible story about two hypothetical wildlife populations, one of which experiences *lower survival* (higher mortality) as densities increase and another that experiences *lower reproduction*.  Have fun and be creative- we will not grade these on whether these mechanisms actually occur in nature- we just want to give you a chance to think about the many possible mechanisms that could potentially regulate wild populations. You can use real-world examples if you would rather- that is up to you.   
 
-b. For one of the above mechanisms, draw (on paper or electronically) two graphs to illustracte how this hypothetical mechanism might manifest at a population level:
+1b. For one of the above mechanisms, draw (on paper or electronically) two graphs to illustracte how this hypothetical mechanism might manifest at a population level:
   i. Abundance (Y axis) over time (X axis).
   ii. Vital rate (*b* or *d*) (Y axis) over abundance (X axis). 
   
 For each graph, provide a short (1-2 sentences) description of why you think your hypothetical D-D mechanism would result in this relationship!  
 
+NOTE: you can use a web app like ["A web whiteboard"](https://awwapp.com/) to quickly and easily make and download sketches! I encourage you to use this method to embed your scetches in your submitted MS Word document.
 
 
+## Exercise 2: Determining Peruvian anchovy optimal harvest levels!
 
+Let's use InsightMaker to create a logistic growth model based on the collapse of the Peruvian anchovy fisheries (pages 45-47 in Gotelli).
 
-### Allee Effect
+As you develop the logistic growth model for the Peruvian anchovy stock in InsightMaker, you might want to refer to the in-class example for [the logistic growth lecture](LECTURE4.html).
 
-What happens if density dependence goes the other way? What if an increase in density changes vital rates to produce an *increase* in the population growth rate *r*? 
+**The Goal**: find the level of harvest that maximizes the total quantity harvested while maintaining a sustainable population!
 
-Imagine a very social species, like prairie dogs. If the density is high, they can warn each other about predators. If the density is low, the predation rate might go up, resulting in higher *d*. This is a positive feedback, and can result in, well, you should simulate it for yourself! But remember, positive feedbacks generally result in unstable or non-regulated systems!!
+1.   In InsightMaker, open your basic exponential growth model and choose "Clone Insight" in the upper right corner to create a copy that you can edit for this exercise. It should look something like this (except for anchovies, not rabbits!): (note that it is not strictly necessary to have [Links] -- e.g., going from *Population* to the [Flows] (*Births* and *Deaths*). But it makes your models more visually explicit- you know which parts of the system are interacting!)
 
+![](basicexp1.png)
 
+2.  Now add the density-dependent components! Remember, the density-dependent birth and death rates in the logistic growth model can be expressed as the following: 
 
-## Units in InsightMaker!
+$b = b_{max} - aN$, aka density-dependent birth rate = ideal (maximum) birth rate - (strength of density dependence * N)
 
+$d = d_{min} + cN$, aka density-dependent death rate = ideal (minimum) death rate + (strength of density dependence * N) 
 
-## Chaos
+"Ideal" in this case means the birth and death rates in the absence of the effects of density.  So, make new [Variables] (Click on **Add Primitive** >> **Add Variable**) for *Ideal Birth Rate* and *Ideal Death Rate*.
 
-## Age Structure
+In addition, we need to add variables for the strength of density dependence (terms *a* and *c* in the equations).  Make sure the **Links** button is activated, and click and drag your mouse to create links from the new variables to the appropriate per-capita vital rates. Your final model should look something like this (except for anchovies, not box turtles!):
 
-## Carrying Capacity
+![](IM5.jpg)
 
-## Units!
 
 
+```{r eval=FALSE, echo=FALSE}
 
+Density <- seq(0,10000,1)  # create a sequence of numbers from 0 to 500, representing a range of population densities
 
+## CONSTANTS
 
+b_max <- 1  # maximum reproduction (at low densities)
+d_min <- 0.4  # minimum mortality 
 
-$\Delta N$ represents the change in population size, ${N_{t+1}}-{N_t}$
+a <- 0.00005    # D-D terms
+c <- 0.00001
 
-The famous "BIDE" equation is a way to break down $\Delta N$ into components. 
+b <- b_max - a*Density
+d <- d_min + c*Density
 
-$\Delta N = B + I - D - E \qquad \text{(Eq. 1)}$
+plot(Density,b,type="l",col="green",lwd=2,ylim=c(0,2),main="Density-Dependence!")
+points(Density,d,type="l",col="red",lwd=2)
+legend("bottomleft",col=c("green","red"),lty=c(1,1),legend=c("per-capita birth rate","per-capita mortality"),bty="n")
 
-where $B$ represents the number of births, $I$ reprents the number of immigrants, $D$ represents the number of deaths, and $E$ represents the number of emigrants. 
+  
 
-If we ignore immigration and emigratrion, then the BIDE equation simplifies to:
-
-$\Delta N = B - D \qquad \text{(Eq. 2)}$
-
-Now let's focus on $B$ and $D$. The important thing to recognize is that the number of births and deaths in a population is not constant. 
-
-What does the number of births depend on? 
-
-What **is** more likely to be constant is the per-capita rate of producing offspring, or dying. Does this make sense? These per-capita rates are often expressed as lower case letters. So $b$  represents per-capita births, and $d$ represents per-capita deaths. 
-
-$b = \frac {B_t}{N_t} \qquad \text{(Eq. 3)}$
-
---or--
-
-$B_t = b \cdot N_t$
-
-The letter $t$ of course represents time, which could be years, or minutes, or decades, or whatever! So the above equation could be described as follows: "the number of births at a given time is equal to the per-capita birth rate times the total population size at that time"
-
-Similarly, 
-
-$D_t = d \cdot N_t \qquad \text{(Eq. 4)}$
-
-Okay, we're almost there.
-
-If $\Delta N = B - D \qquad \text{(Eq. 5)}$ 
-
-then
-
-$\Delta N = b \cdot N_t - d \cdot N_t\qquad \text{(Eq. 6)}$
-
-which is equal to 
-
-$\Delta N = (b - d) \cdot N_t \qquad \text{(Eq. 7)}$
-
-which could also be written:
-
-$\Delta N = r \cdot N_t\qquad \text{(Eq. 8)}$  
-
-Where $r$ represents the difference between births and deaths. If $r$ is positive, then births are greater than deaths and the population grows. If $r$ is negative then deaths exceed births and the population declines. 
-
-We can use *calculus notation* to consider the instantaneous change in population size:
-
-$\frac{\partial N}{\partial t} = r \cdot N  \qquad \text{(Eq. 9)}$ 
-
-This is probably the most fundamental equation of population ecology. 
-
-If you integrate this equation, you get an equation that describes the population size at any time $t$:
-
-$N_t = N_0 e^{rt}  \qquad \text{(Eq. 10)}$      
-
-That is, population size at time $t$ is equal to the population size at time zero (initial abundance) multiplied by the base of the natural logarithm, $e$ to the $rt$ power. 
-
-There you have it! Now you can compute population growth!
-
-A couple more quick notes:
-
-The greek symbol lambda ($\lambda$), is used to represent the finite rate of growth, or $\frac {N_{t+1}}{N_t}$. Lambda is what you multiply the current population size by to compute the population size in the next time step. Sometimes this is also called "big-R", or $R$. 
-
-$N_{t+1}=N_t + B - D  \qquad \text{(Eq. 11)}$         
-
-$N_{t+1}=N_t + b \cdot N_t - d \cdot N_t  \qquad \text{(Eq. 12)}$ 
-
-$N_{t+1}=N_t + (b - d) \cdot N_t \qquad \text{(Eq. 13)}$       
-
-$N_{t+1}=N_t + r \cdot N_t  \qquad \text{(Eq. 14)}$   
-
-$N_{t+1}=N_t \cdot (1 + r)  \qquad \text{(Eq. 15)}$         
-
-$N_{t+1}=\lambda \cdot N_t  \qquad \text{(Eq. 16)}$           
-
-
-Okay now that we got that over with let's start the lab. The first software we will use is our old friend, Excel!
-
-## Exponential growth in Excel
-
-1.	Open the Excel spreadsheet [ExpGrowthExcel.xlsx](ExpGrowthExcel.xlsx). To download this file, right click on the link and select "*Save link as..*" and In the first column, we have a timestep of 1 year for 30 years. In the second column, we have an initial population size ($N_0$) of 100 individuals.  We also have a per-capita rate of increase ($r$) that is currently set at 0.1.
-
-
-2.	To generate $N_t$ for the remaining time steps, we need to apply our knowledge of population ecology. Specifically we need to apply equation 15, above. Do this by clicking in the empty N(2) cell (position B3), typing =, clicking on N(1), completing the equation and hitting enter. As you do this, you should see the equation you are creating appear in the "functions bar".
- 
-
-3.	You can fill the remainder of the cells using the same equation for the other time steps by clicking and dragging the small square at the bottom of the N(2) cell that appears when the cell is selected.
- 
-
-4.	What happened?  We are not seeing a growing population here- actually it seems quite flat! this is surely not what we want!  Click on the N(3) cell to see what equation is being used to calculate the cell value.  The equation is B3*(1+D4).  The B3 part is correct - we want to calculate the N(3) population size using the $N$ from the previous timestep - but the D4 part is incorrect.  We always want to use the same $r$ which is always in the same cell.  You can see that when you drag down an equation as we have done, Excel adds 1 for each row so that the equation references the same relative positions in the spreadsheet for each new cell you want to calculate.  We like that Excel did that for $N$, but not for $r$, so we can tell Excel to stay in the same row for $r$ by inserting a dollar sign in our equation.
-
-5.	In the N(2) cell, edit the equation in the "functions bar" so that there is a dollar sign in D3 (or just use the F4 shortcut). 
- 
-6.	Now drag the equation down again, and you should have a population size in row 31 of 1586.31
-
-7.	Now we will plot our population against time.  Select both columns of data, and select the scatter plot under the Insert banner. A plot of $N$ by Time will automatically appear.  You can change the $r$ value, the data and chart will automatically adjust.
-
-### Exercise 1 (Excel-related problems)
-Please provide short answers to the following questions, and provide your Excel spreadsheet to back up your answers.  
-
-*  ***Short answer (1a.)*** Apply equation 10 (above) to compute expected population size in year 30. Do you get the same answer? Why or why not?  What about year 100?  
-
-*  ***Short answer (1b.)*** What are the *units* of the per-capita rate of population growth, $r$? What if the time step were months instead of years? Would $r$ change? Try it! Use both methods (eq 15 vs equation 10) to compute population size in year 30. Do you see any difference? Is the difference greater or less than it was with a 1-year time step? Why or why not? 
-
-*  ***Short answer (1c.)*** What is the difference between continuous population growth and discrete population growth? Can you think of at least one case where continuous and discrete growth (respectively) would be a more biologically realistic model than the other? Explain.
-
-
-## Exponential growth in R
-
-R is probably the most common software used by modern ecologists for data analysis and simulation. There is a little bit of a learning curve with R, and I think InsightMaker is better in some ways for teaching this class, but I would be remiss if I didn't introduce you to R. We will do more with R when we get into data analysis!
-
-
-### SET UP
-Log onto computers using your assigned login and initial password (instructor will provide). Open the R software from the program menu or desktop.     
-
-## PROCEDURE  
-### STEP I: Set up R!
-Go to website [http://cran.r-project.org/](http://cran.r-project.org/). This is the source for the free, public-domain R software and where you can access R packages, find help, access the user community, etc. The instructor will walk you through this website and provide some discussion on the R software program.
-
-### STEP II. Take some time to get familiar with R
-Take a quick look at the R manual, [Introduction to R](http://cran.r-project.org/doc/manuals/R-intro.html). To jump into the deep end of the pool, try to implement the steps in Appendix A, located [here](http://cran.r-project.org/doc/manuals/R-intro.html#A-sample-session). You might not understand everything right away, but you have the link, so you can return to this!  
-
-If you already have basic R expertise, this is your opportunity to help your peers to develop the level of comfort and familiarity with R that they will need to perform data analysis and programming tasks in this course.     
-
-Depending on whether you are already familiar with R, you may also find the remainder of this document useful as you work your way through the course (and there are many other good introductory R resources available online... let me know if there is one you particularly like and I will add it to the course website (Links page). As you work your way through this tutorial (on your own pace), please ask the instructor or your peers if you are uncertain about anything. 
-
-### Set up the workspace
-
-The first thing we usually do when we start an R session is we set up the workspace. That is, we load **packages**, assign key parameters and initialize variables. 
-
-In this case, setting up the workspace is easy. We just need to define our parameter of interest - $r$ -, and set up a **vector** to represent the years of interest. 
-
-We can store data in memory by assigning it to an "object" using the assignment operator **<-**. For example, this would assign the object "x" the value of 5. 
-
-```{r eval=FALSE}
-x <- 5     #Assign the value of 5 to the object "x"
-x          #Print the value of the object "x"
 ```
 
-Note that any text after a pound sign (#) is not evaluated by R. These are *comments* and are intended to help you follow the code. You should always include comments in any code that you write- we humans tend to read and understand written language better than computer code!
+4.  Next, you'll need to update the equations to calculate the per-capita birth and death rates.  Click on the **=** sign in the corner of each variable, and enter the appropriate equations for the appropriate rates (see above):
 
-Let's assign our per-capita population growth rate, $r$ (but this could be called anything), and our initial population size to an object called **N0**, and the number of years to simulate.
+5.  Enter starting values for your variables. Let's use 10,000 for the initial *Anchovy Population*, 1 for the *Ideal Birth Rate*, 0.00005 for *Density Dependence* for birth rate, 0.4 for *Ideal Death Rate*, and 0.00001 for *Density Dependence* for death rate.
 
-```{r}
-r <- 0.1     #Assign the value of 0.1 to the object "r"
-N0 <- 100    #Assign the value of 100 to the object "N0"
-nyears <- 50 #Assign the value of 50 to the object "nyears"
+6.  Use the **Settings** button to change the **Simulation Length** to 24 and the timescale to "Months". Click **Simulate**. You may need to click **Configure** in order to clean up your plot to just show **Time** on the x-axis and **Anchovy Population** on the y-axis.
+
+7.  Next, let's add an additional source of mortality (right now, we have natural baseline mortality (40% per year) and density-dependent effects). This new source of mortality is commercial fishing! This source of mortality should be a new [Flow Out] from the Anchovy population. For now, let's assume harvest is constant -- that is, a given number are harvested, regardless of the size of the population (no feedback!).
+
+8. One last thing before we play around with harvest rates: in the properties menu for the anchovy stock, set the property **Only Positive Rates** to "Yes". We don't want to harvest the population into negative numbers!!!
+
+9.  Finally, try to find the **maximum sustainable yield**. That is, find the maximum harvest rate that yields a sustainable (non-declining) population. To do this, try different rates of harvest- I recommend using increments of 200 at first, then narrowing down to smaller increments. Otherwise you might be here a while!!
+
+### QUESTIONS, Exercise 2:
+
+2a. What is the (approximate) MSY for this population?
+
+2b. Does the harvest process change the **carrying capacity** for the Peruvian sardines? Explain your reasoning. 
+
+2c. Does the MSY change if you reduce the initial population size down to 1,000 instead of 10,000? If so, what is the new MSY? 
+
+2d. Does the MSY point represent a **stable equilibrium**? That is, does it return to that equilibrium even if you perturb the system? Why? Why not? 
+
+2e. If you were managing this Peruvian anchovy system, would you recommend that catch limits be set at the MSY? Why or why not? (More generally, is the MSY really sustainable?) 
+2f. Think back to your Wildlife Ecology course (or refer to the Gotelli book!). If you know $K$ and $r$, how can you analytically solve for **Maximum Sustainable Yield**? Show your calculation. Does your computed MSY match the MSY you found by trial-and-error? (note that $r$ in this case is the difference between the maximum birth rate and the minimum death rate!) 
+
+
+## Exercise 3: fun with logistic growth
+
+For this exercise we will set up a simpler model in InsightMaker- this time, we will replicate the second-most important equation of population ecology (**Eq. 6**, above.
+
+1. Starting from a blank canvas, add a [Stock] called *Population*. This population should be initialized at 10 individuals, and the *Allow Negatives* field in the properties window should be set to "No". Set *Show Value Slider* to "Yes", and set the *Slider Min* to 0 and *Slider Max* to 1000. 
+
+2. Make a new [Flow] coming out of *Population*, called *Delta N*. In the properties window, set *Only Positive Rates* to "No". You should now see that the flow has an arrow on both ends. That is, this flow can either represent a [Flow In] or a [Flow Out]. It represents the change in *Population* each time step, which can either be positive or negative!
+
+3. Make a new [Variable] called *Max growth rate* (also known as $r_{max}$), and set it at 0.1. Make a link from *Max growth rate* to *Delta N*. Set *Show Value Slider* to "Yes", and set the *Slider Min* to 0 and *Slider Max* to 5. 
+
+4. Make a new [Variable] called *Carrying capacity* (also known as $K$), and set it at 500. Make a link from *Carrying Capacity* to *Delta N*.
+
+5. Finally, open the equation editor for *Delta N* and type in the logistic growth equation (**Eq. 6**). 
+
+6. Run the simulation for 100 years (1 year time step) and make sure it behaves as expected- that is, it should exhibit logistic (S-shaped) growth and should level off at carrying capacity. 
+
+
+### QUESTIONS, Exercise 3:
+
+3a. What happens if you initialize the *Population* at above carrying capacity? Do you still see "S-shaped" (logistic) growth? What if you initialize abundance **at** carrying capacity? Is carrying capacity a **stable equilibrium**? Explain your reasoning. 
+
+3b. Return the initial abundance to 10. Now start adjusting the value of *Max Growth Rate*. What do you notice as the maximum growth rate increases? Focus on the time series of population abundance over time. Can you identify different major changes as the growth rate increases from 1 to 5. You should be able to identify at least four unique patterns! Describe the patterns and the approximate thresholds at which change-overs occur from one pattern to the next. One of these patterns is known as **Chaos** (yes, that is the technical name)!! Can you figure out which pattern is known as chaos??
+
+3c. Try changing the **Simulation Time Step** in the **Settings** menu. Note that you can set the simulation time step to fractional values- for example, try setting it to 0.1. What if you change it to 2, or 5? Does this change the patterns and thresholds from the previous question? Can you figure out why these patterns emerge?
+
+3d. Think of at least two hypothetical or real-world cases where **chaos** could emerge as a result of density-dependence. Explain your reasoning!
+
+
+## Exercise 4: delayed density-dependence!
+
+What happens when the effects of resource competition are delayed? In this case, the effects of competition (reduction in fitness) will not manifest immediately- but emerge later down the road!
+
+Let's build on the previous model...
+
+1. First, add a new [Variable] to the system, called *Delayed Abundance*, which will store a previous abundance value. Draw a new link from *Population* to *Delayed abundance* and from *Delayed abundance* to *Delta N*. 
+
+2. Add a new [Variable] to the system, called *Time Delay*. Set *Show Value Slider* to "Yes", and set the *Slider Min* to 0 and *Slider Max* to 5, and *Slider Step* to 1. Make a new link from *Time Delay* to *Delayed Abundance*
+
+3. Open the equation window for *Delayed abundance*. This variable will store a previous value of *Abundance*, with the time delay set by *Time Delay*. To do this, use the following syntax:
+
 ```
-
-If we want to know what the population size is at the next time step, we can simply multiply N0 by (1+r).
-```{r}
-N0 * (1+r)   #Multiplies the value stored in the object "N0" by 1 plus the value stored in the object "r". As soon as you run this line of code, the result of the calculation is printed.
+Delay([Population], [Time delay], 100)
 ```
+The "100" in this function is there just to help the simulation get started (at the first time step(s), there are no previous values of *Abundance*, so InsightMaker will use this value instead).
 
-How can we find the population size for the next 50 years? Let's first make an object that is a vector of years using the **seq()** or "sequence" function.
-```{r}
-years <- seq(from=0, to=nyears, by=1)   #Creates a sequence of numbers from 0 to the value stored in the object "nyears" (in this case, 50). Because you've told this sequence to increase by 1, you've created a string of numbers from 0 - 50 that contains 51 elements. A single series of elements (e.g., a single column of numbers) is called a vector. You then assign this vector to the object "years".
-years                                   #Print the value of the object "years" that you just created.
+4. Finally, modify the equation for *Delta N* so that *Delayed abundance* (not *Population*) is used in the density-dependent portion of the equation. Your equation should now look something like this:
+
 ```
-
-Now, let's build a storage structure to store simulated population size over this time period
-
-```{r}
-N <- numeric(nyears+1)    #Make an empty storage vector. The numeric() function takes the contents within the parentheses and converts those contents to the "numeric" class. Don't worry if this doesn't make sense -- what you need to know is that the value within the parentheses (in this case, 50+1=51) is used to tell this function how many zeros to create. So, this line of code creates a vector of 51 zeros, and assigns that vector to the object "N".
-N                         #Prints the contents of the object "N".
+[Max growth rate]*[Population]*(1-[Delayed abundance]/[Carrying Capacity])
 ```
 
 
-### Run the simulation!
+### QUESTIONS, Exercise 4:
 
-Then we can use a **for loop** (a very powerful computer programming trick) to automatically generate the population size for each of those years (note the similarity in the equation inside the for loop to Expression 1.15 in Gotelli).
-```{r}
-N[1] <- N0                # The brackets [] are used to indicate the position of an element within a vector. This line of code assigns the value of the object "N0" (100) to the first element in the "N" object. Remember, the "N" object is a vector of 51 zeros. Now, the first zero is changed to 100.
-lambda <- 1 + r           # (1 + r) is equal to lambda, the finite rate of growth.  This stores the result of the calculation (1 + 0.1 = 1.1) in the object "lambda".
-for (i in 2:(nyears+1)){  # This for-loop will run through the line of code between the curly brackets {}. "i" is simply the name of a variable (you can use "j", or "k", instead -- any variable name will do). "i" changes each time the loop iterates; basically, it will increase by 1 each time the loop is run, starting at "2" up until the specified maximum number of loops "50+1". 
-  N[i] <- lambda*N[i-1]   # This takes the [ith - 1] element of "N", multiplies that element by the value of lambda, then assigns that calculated result to the [ith] element of "N".
-}                         # This ends the for-loop.
-N                         # Now print the contents of the object "N".
-```
+4a. Run the model with different values for the time delay. How does the system behave with a time delay? Do you see any similarities with exercise 3? 
+
+4b. Parasitoid wasps help to keep many lepidopteran populations in check. The wasps lay their eggs in caterpillars, and the caterpillars end up dying a horrific death as the wasp larva grows. Wasp-regulation on caterpillars often exhibits delayed density-dependence, resulting in oscillations in caterpillar populations. Can you think of why this might be the case?  
 
 
-### Plotting
 
-Let's plot our population size against time. We only want the first 100 data points in N, so we use **indexing** to specify that. You may have noticed the square brackets inside the for loop...
+##Checklist for Lab 2 completion
 
-```{r}
-plot(N~years)   #This plot() function tells R to plot the y variable by the x variable. "N" is the y variable (dependent variable), and "years" is the x variable (independent variable). The tilda "~" stands for "as a function of". There are many ways to customize the appearance of a plot in R - for now, just use the defaults.
-```
-
-### Exercise 2 (R-related problems)
-
-Please provide short answers to the following questions, and provide your R code to back up your answers.
-
-*  ***Short answer (2a.)*** Tweak the above code to run for 100 years. Plot your results. What is the final population size? 
-
-*  ***Short answer (2b.)*** Change r to 0.5 and run again for 100 years (and plot the results). What is the final population size now?
-
-*  ***Short answer (2c.)*** Try to tweak the value of $r$ such that the final population size after 100 years is 1000. What is the value of $r$? After you solve it by trial and error, can you solve this problem analytically using Eq. 10 above? Show your work!
-
-*  ***Short answer (2d.)*** Change the value of $r$ to -0.1. How long until the population goes extinct? Explain your answer. 
-
-## Exponential growth in InsightMaker
-
-You should already have created a (free) account in [insightmaker](https://insightmaker.com/), and you should already know the basics about how to set up and run a model. 
-
-1.	Click "Create New Insight" to start a new model (click "Clear this Demo" to clear the canvas and have an open workspace). Save the blank model by clicking the "Save" button.
-
-2.	Create a new [Stock] named *Population* using the "**Add Primitive**" button at top left ("Primitive" is just a computer-sciencey term referring to basic building blocks). You can name the [Stock] and configure it in the properties tab at the right.
-
-![](IM1.png)
- 
-3.	Change the Initial Value of *Population* to 100.
-
-4.	Create a new [Flow] going from empty space to the primitive *Population* (make sure the **Flow/Transitions** button is activated instead of **Links** at the top, hover over *Population* until an arrow appears, click and drag to create the [Flow], use the **Reverse Connection Direction** button to change the flow direction). Name the flow *Births*.
-
-5.	Create a new [Flow] going from *Population* to empty space. Name the flow *Deaths*.
-
-6.	The model diagram should now look something like this:
-
-![](IM2.png)
- 
-7.	Change the **Flow Rate** property of *Births* to 0.16 $*$ [Population]. This represents the total number of individuals entering [Population] in each time step.
-
-8.	Change the **Flow Rate** property of *Deaths* to 0.10 $*$ [Population]. This represents the total number of individuals leaving [Population] in each time step.
-
-Can you already tell whether this is a growing or declining population? (just a quick thought question, not part of the written lab!)
-
-9.	Run the model by clicking the **Simulate** button.  We can change how the simulation is run by clicking the **Settings** button (left of Save).  We can also change the settings of how the plot is created by clicking the **Configure** button within the simulation results window.
-
-### Exercise 3 (InsightMaker problems)
-
-Please provide short answers to the following questions, and (when prompted) provide your "Insights" to back up your answers (easiest would just be to share them with me using InsightMaker- we will go over this in class).
-
-First, tweak the above model so that per-capita birth rate (b) and death rate (d) are separate elements of the model (using the "Variable" primitive). Your Insight should look something like this:
-
-![](IM3.png)
-
-To enable easy manipulation of these variables, change the **Show Value** Slider option of *Birth Rate* (in the properties window) to Yes.  Change the **Slider Max value** to 1, the **Slider Min value** to 0, and the **Slider Step value** to 0.01.  Do the same for *Death Rate* and *Population* (initial abundance $N_0$). For abundance, set the step size to 1 so we don't have fractional individuals! Now click on the white space of your model; you should now see the Birth Rate, Population and Death Rate sliders on the info tab. Change the slider values of the rates a few times, re-running the simulation each time. When you are confident that your model is working right, share it with me (username "kevintshoemaker") and Margarete (username "Margarete"). 
-
-*  ***Short answer (3a.)*** Starting with a growing population, can you come up with two different scenarios in which *Population* is neither growing nor declining, by only changing one of the sliders from the starting conditions? Explain your answer. 
-
-The simulations that you ran above produced population growth curves that were very smooth, but we all know that populations don't grow in this manner because of **stochasticity** (randomness).  Let's add some randomness to our vital rates! Change the **Show Value Slider** option of the Birth Rate primitive to No.  Change the Equation to 0.1 + RandNormal(0, 0.1).  The RandNormal()  function generates a normally distributed random number with mean equal to the first argument and standard deviation equal to the second argument. This means that in each time step we have a slightly different birth rate.   Do the same for *Death Rate*. Run multiple simulations (at least 10) and look for patterns. Use the **Compare Results** tool to compare and provide output. When you are confident the model is right, send it to your instructor/TA. 
-
-*  ***Short answer (3b.)*** Is it possible to have a declining population even when *Birth Rate* and *Death Rate* are the same on average? Is it possible to have a declining population when *Birth Rate* is greater than *Death Rate* on average? Explain your reasoning!
-
-
-##Checklist for Lab 1 completion
 *Please bundle the Word, Excel, and R code files into one Zip file and email to Professor Shoemaker and Margarete Walden. The InsightMaker models can be shared directly in InsightMaker (preferred) or you can take screenshots and bundle those pictures into the Zip file.
 
 ***Due Feb. 3 at 11 am.***
