--- a/LAB3.Rmd
+++ b/LAB3.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Lab 2: Density-dependence and more!"
+title: "Lab 3: Age structure and Stochasticity"
 author: "NRES 470/670"
 date: "Jan 24, 2017"
 output: 
@@ -13,11 +13,17 @@ output:
 knitr::opts_chunk$set(echo = TRUE, cache = TRUE)
 ```
 
-In this lab we will have an opportunity to build more complex population models in InsightMaker. Among the concepts we will play around with are *density dependence*, *chaos* and *time delays*.  
+In this lab we will have an opportunity to build more complex population models in InsightMaker. Among the concepts we will play around with are *age structure*, *parameter uncertainty*, *demographic stochasticity* and *environmental stochasticity*.  
+
+
+## Exercise X 
+
+1c) relative role of demographic and environmental stochasticity as populations get bigger
+1d) effects of different stochastic probability distributions. 
 
 First let's do some math!
 
-## Mathematics of Density-Dependent population regulation
+## Mathematics of age-structured population growth!
 
 Recall the basic population growth equation:
 
@@ -118,7 +124,7 @@ legend("bottomleft",col=c("green","red"),lty=c(1,1),legend=c("per-capita birth r
 
 5.  Enter starting values for your variables. Let's use 10,000 for the initial *Anchovy Population*, 1 for the *Ideal Birth Rate*, 0.00005 for *Density Dependence* for birth rate, 0.4 for *Ideal Death Rate*, and 0.00001 for *Density Dependence* for death rate.
 
-6.  Use the **Settings** button to change the **Simulation Length** to 24 and the timescale to "Months". Click **Simulate**. You may need to click **Configure** in order to clean up your plot to just show **Time** on the x-axis and **Anchovy Population** on the y-axis. Run the model to see if it is working. Since the abundance is initialized at carrying capacity, abundance should not change over time. Change the initial abundance to a small number (e.g., 10) temporarily to make sure that you see an "S-shaped" logistic growth curve. 
+6.  Use the **Settings** button to change the **Simulation Length** to 24 and the timescale to "Months". Click **Simulate**. You may need to click **Configure** in order to clean up your plot to just show **Time** on the x-axis and **Anchovy Population** on the y-axis.
 
 7.  Next, let's add an additional source of mortality (right now, we have natural baseline mortality (40% per year) and density-dependent effects). This new source of mortality is commercial fishing! This source of mortality should be a new [Flow Out] from the Anchovy population. For now, let's assume harvest is constant -- that is, a given number are harvested, regardless of the size of the population (no feedback!).
 
